--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -11,5 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDiale
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+spring.datasource.initialization-mode=never
+
 #GR10COMERCIALIZA
 #GR10COMERCIALIZADORA
