--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port=8081
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
@@ -21,5 +21,7 @@ spring.mail.port=587
 spring.mail.username=comercializadorachinitos@gmail.com
 spring.mail.password=laHnomurio13!!
 spring.mail.properties.smtp.auth=true
-#spring.mail.properties.smtp.starttls.enable=true 
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
