--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,8 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<!-- dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency> --> 
+		<!-- dependency> <groupId>com.h2database</groupId> <artifactId>h2</artifactId> 
+			<scope>runtime</scope> </dependency> -->
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -91,6 +88,12 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
 			<version>1.5.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.25</version>
 		</dependency>
 	</dependencies>
 
