--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://database-chinitos.czjbrpr8ic92.us-east-1.rds.amazonaws.com:3306/GR10COMERCIALIZADORA?useSSL=false&serverTimezone=UTC
-spring.datasource.username=GR10COMERCIALIZA
-spring.datasource.password=GR10COMERCIALIZADORA
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
