--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ spring.datasource.platform=h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.h2.console.settings.web-allow-others=true
 
 ##CONFIURACION NEVIO MAIL
 spring.mail.host=smtp.gmail.com
