add feacture sell tickets

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,3 +28,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.media-types.pdf=application/pdf
+
+
+##HOST API REST
+ws.rest.aeroline.base-url=https://aerolinea-condor-espe-2021.herokuapp.com/
